@startuml

class User {
    -id : int
    -username : String
    -password : String
    -email : String
}

class Admin
class Customer

User <|-- Admin
User <|-- Customer

class Cupcake {
    -topping : List<Topping>
    -bottom : List<Bottom>
    -int price
}

class Topping
class Bottom

class UserController {
    {static} +addRoutes() : void
    {static} +createUser() : void
    {static} +login() : void
    {static} +logout() : void
}

class UserMapper {
    {static} +login() : User
    {static} +createUser() : User
    {static} +adminAccess() : User
}

class Order {
    -id : int
    -orderStatus : String
    -orderDate : LocalTime
    -userId : int
}

class OrderController {
    {static} +addRoutes() : void
    {static} +createOrder() : void
    {static} +userOrder() : void
}

class OrderMapper {
    {static} +createOrder() : Order
    {static} +userOrder() : Order
    {static} +orderDate() : Order
}

class ShoppingCart {
    -orderId : int
    -orderDetails : String
    -orderLine : String
}

UserController --> UserMapper
OrderController --> OrderMapper
Order --> User
ShoppingCart --> Order

Order "1" --> "*" Cupcake

@enduml